Reorganize files structure for good foundation

--- a/index.html
+++ b/index.html
@@ -6,9 +6,8 @@
   <title>Breakout-Webcam</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <link rel="stylesheet" type = "text/css" href="index.css">
-  <!-- <script src="index.js"></script> -->
-  <script src="bundle.js"></script>
+  <link rel="stylesheet" type = "text/css" href="./styles/index.css">
+  <script src="./scripts/bundle.js"></script>
 </head>
 <body>
   <h1 id='test'>
