Test Sprite Animations

--- a/index.html
+++ b/index.html
@@ -7,11 +7,19 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <link rel="stylesheet" type = "text/css" href="./styles/index.css">
-  <script src="./scripts/bundle.js"></script>
 </head>
 <body>
+  
   <h1 id='test'>
     Hello there
   </h1>  
+  
+  <canvas id="coinAnimation"></canvas>
+
+  <div id='div-test'></div>
+  
+  <img id='test-image' src="./assets/images/coin-sprite-animation-sprite-sheet.png" alt="">
+  
 </body>
+<script src="./scripts/bundle.js"></script>
 </html>
