Test Sprite Animations take 2

--- a/index.html
+++ b/index.html
@@ -14,12 +14,11 @@
     Hello there
   </h1>  
   
+  <canvas id="canvasRoot"></canvas>
   <canvas id="coinAnimation"></canvas>
 
   <div id='div-test'></div>
-  
-  <img id='test-image' src="./assets/images/coin-sprite-animation-sprite-sheet.png" alt="">
-  
+    
 </body>
 <script src="./scripts/bundle.js"></script>
 </html>
