Draw blank canvas

--- a/index.html
+++ b/index.html
@@ -10,14 +10,13 @@
 </head>
 <body>
   
-  <h1 id='test'>
-    Hello there
-  </h1>  
+  <div>
+    <h1 id='test'>
+      Hello, Break it Out!
+    </h1>  
+  </div>
   
   <canvas id="canvasRoot"></canvas>
-  <canvas id="coinAnimation"></canvas>
-
-  <div id='div-test'></div>
     
 </body>
 <script src="./scripts/bundle.js"></script>
