Incorporate hand waving gestures to control platform with TensorFlow

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     <div id="status">Loading mobilenet...</div>
 
     <div id='controller'>Hello from controller div</div>
+    <p id='webcamPredictions'>none</p>
 
 
 
