--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Breakout-Webcam</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <link rel="stylesheet" type = "text/css" href="./styles/index.css">
+  <link rel="stylesheet" type = "text/css" href="./index.css">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
 </head>
 <body>
