Add right and left glow cue user on the direction registered

--- a/index.html
+++ b/index.html
@@ -18,10 +18,16 @@
   </div>
   
   <div id='game-div'>
-    <p>
-      🎰 <span id='score-counter'>0</span> ⭐️
-    </p>
-    <canvas id="canvasRoot"></canvas>
+    <div id='sideglow-left' class='sideglow'></div>
+    
+    <div id='game-canvas'>
+      <p>
+        🎰 <span id='score-counter'>0</span> ⭐️
+      </p>
+      <canvas id="canvasRoot"></canvas>
+    </div>
+
+    <div id='sideglow-right' class='sideglow'></div>
   </div>
   
   <div class="webcam-box">
