Draft code to save a trained model

--- a/index.html
+++ b/index.html
@@ -52,7 +52,8 @@
       <h3>
         Want to play by waving your 👋? (📷 required)
       </h3>
-      
+      <input id="json-upload" type="file" />
+      <input id="weights-upload" type="file" />
       <div>
         <button id='button-webcam'>
           👍✋ Let's do it! 🤚👐
