--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     
     <div id='game-canvas'>
       <p>
-        🎰 <span id='score-counter'>0</span> ⭐️
+        <span id='score-counter'>0</span> ⭐️
       </p>
       <canvas id="canvasRoot"></canvas>
     </div>
@@ -42,6 +42,35 @@
 
   </div>
 
+  <div class="get-the-app-container">
+    <p>Lets, GET IN TOUCH!</p>
+    <div>
+      <a href="https://www.huangtonyj.com" target="_blank">
+        <!-- <i class="far fa-id-card" /> -->
+        <i class="far fa-id-card"></i>
+      </a>
+
+      <a href="https://www.linkedin.com/in/tonyjhuang/" target="_blank">
+        <i class="fab fa-linkedin"></i>
+      </a>
+
+      <a href="https://github.com/huangtonyj" target="_blank">
+        <i class="fab fa-github-square"></i>
+      </a>
+
+      <a href="mailto:huangtonyj91@gmail.com?Subject=Hello%20Tony">
+        <i class="far fa-envelope"></i>
+      </a>
+
+      <a href="https://angel.co/tony-huang-10" target="_blank">
+        <i class="fab fa-angellist"></i>
+      </a>
+
+      <a href="https://www.instagram.com/futuretony/" target="_blank">
+        <i class="fab fa-instagram"></i>
+      </a>
+    </div>
+
 
   <!-- Greeting Modals -->
   <div id='modal-init' class='modal'>
@@ -52,8 +81,6 @@
       <h3>
         Want to play by waving your 👋? (📷 required)
       </h3>
-      <input id="json-upload" type="file" />
-      <input id="weights-upload" type="file" />
       <div>
         <button id='button-webcam'>
           👍✋ Let's do it! 🤚👐
