Add ability to start playing with tf-controls from loading screen.

--- a/index.html
+++ b/index.html
@@ -85,6 +85,9 @@
         <button id='button-webcam'>
           👍✋ Let's do it! 🤚👐
         </button>
+        <button id='button-tf-webcam'>
+          👍✋ Let's go!! 🤚👐
+        </button>
         
         <button id='button-keyboard' class='close'>
           👎 Keyboard please. ⌨️
