--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     <div id='game-canvas'>
       <p>
         <span id='score-counter'>0</span> ⭐️
+        <span id='life-counter'>0</span> 💔
       </p>
       <canvas id="canvasRoot"></canvas>
     </div>
@@ -34,13 +35,13 @@
       <video autoplay playsinline muted id="webcam" width="224" height="224"></video>
   </div>
 
-  <div id='tf' class=''>
+  <!-- <div id='tf' class=''>
 
     <div id="status"></div>
 
     <div id='controller'></div>
 
-  </div>
+  </div> -->
 
   <div class="get-the-app-container">
     <p>Lets, GET IN TOUCH!</p>
