--- a/index.html
+++ b/index.html
@@ -87,9 +87,9 @@
   <!-- Loading Modals -->
   <div id='modal-loading' class='modal'>
     <div class='modal-content'>
-      <h1 id='loading'>
-        Please enable webcam
-      </h1>
+      <!-- <h1 id='loading'> -->
+        Please enable webcam.
+      <!-- </h1> -->
       
       <div class="loader">
         <div class="platform"></div>
