Add video example

--- a/index.html
+++ b/index.html
@@ -82,6 +82,13 @@
         </button>
       </div>      
     </div>
+
+    <div id="video-sample">
+      <video autoplay muted loop>
+        <source src="./assets/images/breakout.mp4" type="video/mp4">
+      </video>
+    </div>
+      
   </div> 
 
   <!-- Loading Modals -->
