Touch up init modal styling

--- a/index.html
+++ b/index.html
@@ -80,7 +80,9 @@
         <button id='button-keyboard' class='close'>
           👎 Keyboard please. ⌨️
         </button>
-      </div>      
+      </div>
+      
+      <div class='divider'></div>
       
       <div id="video-sample">
         <video autoplay muted loop>
