Add 'press space to start game'

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
   </div>
   
   <div id='game-div'>
+    <div id='start-game-message'>press space to start game</div>
     <div id='sideglow-left' class='sideglow'></div>
     
     <div id='game-canvas'>
