Delete div "double id" bug

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       <video autoplay playsinline muted id="webcam" width="224" height="224"></video>
   </div>
 
-  <div id="contacts-container">
+  <div>
     <a href="https://www.huangtonyj.com" target="_blank">
       <!-- <i class="far fa-id-card" /> -->
       <i class="far fa-id-card"></i>
@@ -121,7 +121,7 @@
         Check out my profile:
       </p>
       
-      <div id="contacts-container">
+      <div>
         <a href="https://www.huangtonyj.com" target="_blank">
           <!-- <i class="far fa-id-card" /> -->
           <i class="far fa-id-card"></i>
