Update LinkedIn link

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       <i class="far fa-id-card"></i>
     </a>
 
-    <a href="https://www.linkedin.com/in/tonyjhuang/" target="_blank">
+    <a href="https://www.linkedin.com/in/HuangTonyJ/" target="_blank">
       <i class="fab fa-linkedin"></i>
     </a>
 
@@ -127,7 +127,7 @@
           <i class="far fa-id-card"></i>
         </a>
       
-        <a href="https://www.linkedin.com/in/tonyjhuang/" target="_blank">
+        <a href="https://www.linkedin.com/in/HuangTonyJ/" target="_blank">
           <i class="fab fa-linkedin"></i>
         </a>
       
