Update loading modal

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
   <!-- Loading Modals -->
   <div id='modal-loading' class='modal'>
     <div class='modal-loading-content'>
-      Please enable webcam.
+      please enable webcam
     </div>
       
     <div class="loader">
