Add 3s countdown after webcam is loaded

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 
   <!-- Loading Modals -->
   <div id='modal-loading' class='modal'>
-    <div class='modal-loading-content'>
+    <div id='modal-loading-content'>
       please enable webcam
     </div>
       
